# Mini-Social-Media-School-project

./: CMakeLists.txt  Comment.cpp  Comment.h  Contents.docx  Date.cpp  Date.h  Group.cpp  Group.h  Like.cpp  Like.h  Post.cpp  Post.h  Profile.cpp  Profile.h  README.md  SocialNetwork.cpp  SocialNetwork.h  User.cpp  User.h  main.cpp  ~$ntents.docx
